--- a/gb/22/9/9/n13820872.md
+++ b/gb/22/9/9/n13820872.md
@@ -1,61 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>桃园市长参选人郑运鹏 关心弱势儿童</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13820873-574345-600x400.jpg" />
 <h6>郑运鹏到中坜的庇护工场“伊甸烘焙咖啡屋”，学习包装月饼礼盒。（桃园市长参选人郑运鹏服务团队提供）
 </h6>
 <hr>
 <p>【大纪元2022年09月09日讯】（大纪元记者徐乃义台湾桃园报导）桃园市长参选人郑运鹏提出“弱势三心计划”政策，获得许多回馈，郑运鹏说，这么关心育儿议题、罕病儿童、罹患先天性疾病儿童，是因为自己的儿子女儿，在出生时都有一段紧张的故事。</p>
-<figure id="13820874" aria-describedby="caption-13820874" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/09/id13820874-574346-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/09/id13820874-574346-450x300.jpg" alt="郑运鹏认为每一项福利措施，就是要照顾到最弱势的那一个人。" width="500" /></a><figcaption id="caption-13820874" class="wp-caption-text">郑运鹏认为每一项福利措施，就是要照顾到最弱势的那一个人。（桃园市长参选人郑运鹏服务团队提供）</figcaption></figure>
+<figure id="13820874" aria-describedby="caption-13820874" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/09/id13820874-574346-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/09/id13820874-574346-450x300.jpg" alt="郑运鹏认为每一项福利措施，就是要照顾到最弱势的那一个人。" width="500" /></a><figcaption id="caption-13820874" class="wp-caption-text">郑运鹏认为每一项福利措施，就是要照顾到最弱势的那一个人。（桃园市长参选人郑运鹏服务团队提供）</figcaption></figure>
 <p>郑运鹏的儿子是早产儿，刚出生一送进来产妇病房，医生就说明他的脑间隔太宽，生完以后需要回医院观察三个月，再照X光检查。询问医生，这状况最严重可能是脑性麻痹的征兆，要有最坏的打算。</p>
-<figure id="13820875" aria-describedby="caption-13820875" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/09/id13820875-574347-450x324.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/09/id13820875-574347-450x324.jpg" alt="郑运鹏提出的“弱势遮雨棚 三心计划”，要让罕病儿童家里经济能安心。" width="500" /></a><figcaption id="caption-13820875" class="wp-caption-text">郑运鹏提出的“弱势遮雨棚 三心计划”，要让罕病儿童家里经济能安心。（桃园市长参选人郑运鹏服务团队提供）</figcaption></figure>
+<figure id="13820875" aria-describedby="caption-13820875" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/09/id13820875-574347-450x324.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2022/09/id13820875-574347-450x324.jpg" alt="郑运鹏提出的“弱势遮雨棚 三心计划”，要让罕病儿童家里经济能安心。" width="500" /></a><figcaption id="caption-13820875" class="wp-caption-text">郑运鹏提出的“弱势遮雨棚 三心计划”，要让罕病儿童家里经济能安心。（桃园市长参选人郑运鹏服务团队提供）</figcaption></figure>
 <p>郑运鹏说，三个月的时间相当煎熬，夫妻完全不敢告诉长辈增加担忧；幸好后来没事，儿子日后平安长大，但这种担心婴幼儿患病的煎熬，深深体会过，而女儿是做在羊膜穿刺时，被诊断出DNA多一段，医生表示，这多出来的一段存在很多先天性遗传性疾病的风险。</p>
 <p>之后郑运鹏夫妻两人一起接受各种检测，万幸最后也是运气好，妹妹重复的这一段DNA，并没有让她造成任何健康上的影响。</p>
 <p>过了几年，郑运鹏儿子六岁的时候得了肠病毒重症，当时情况危急到台大医院开出命危通知书，表示如果运气不好，不是少一个儿子，就是脑性麻痹。</p>
 <p>在台大儿童医院的照顾之下，郑运鹏儿子幸运地在五天后出院了，但后来只要看到家长推着轮椅、不辞辛劳的照顾脑性麻痹的孩子，郑运鹏就会回想起当时的恐惧，并想为这些患病的儿童与辛苦的照顾者做些什么，改善他们的环境。</p>
-<p>郑运鹏到中坜的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BA%87%E6%8A%A4%E5%B7%A5%E5%9C%BA.md#1">庇护工场</a>“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%8A%E7%94%B8.md#1">伊甸</a>烘焙咖啡屋”，学习包装月饼礼盒。庇护工场的员工们都非常有自信，相处得十分愉快，他们教郑运鹏做产品品管，郑运鹏也订购了几个给团队的礼盒，并现学现卖的亲自包装。</p>
-<p>桃园有15家<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BA%87%E6%8A%A4%E5%B7%A5%E5%9C%BA.md#1">庇护工场</a>，服务非常多元，从烘焙、印刷、洗衣等服务，都有提供，品质是一流水准。欢迎大家多多向桃园的庇护工场订购产品、预约服务，外地的朋友也可以网购，连结在留言。</p>
+<p>郑运鹏到中坜的庇护工场“伊甸烘焙咖啡屋”，学习包装月饼礼盒。庇护工场的员工们都非常有自信，相处得十分愉快，他们教郑运鹏做产品品管，郑运鹏也订购了几个给团队的礼盒，并现学现卖的亲自包装。</p>
+<p>桃园有15家庇护工场，服务非常多元，从烘焙、印刷、洗衣等服务，都有提供，品质是一流水准。欢迎大家多多向桃园的庇护工场订购产品、预约服务，外地的朋友也可以网购，连结在留言。</p>
 <p>“政府就是要照顾最弱势的人”是郑运鹏从政的初衷，若成为桃园市长，就会做最弱势的人的遮雨棚，郑运鹏认为每一项福利措施，就是要照顾到最弱势的那一个人。</p>
 <p>郑运鹏提出的“弱势遮雨棚 三心计划”，要让罕病儿童家里经济能安心，让政府对脆弱家庭的服务是一条心，并提升社工人员的心理健康照顾。</p>
 <p>郑运鹏认为市长该为市民遮风挡雨，撑起最大、最稳固的社会安全网，提供弱势朋友更体贴的照顾。◇</p>
 <p>责任编辑：唐音</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/21/n13786098.md#1">集爱送庇护礼 盼庇护工场中秋营收突破千万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/11/n13800035.md#1">庇护工场中秋礼盒传爱 竹市府邀民众响应公益</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/21/n13807118.md#1">身障团体暨庇护工场秋节产品展售 呼吁大家踊跃购买</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/24/n13808786.md#1">伊甸吁家长关注 逾3成幼儿需进一步了解发展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/2/n13815955.md#1">永信社福中秋送暖 助弱势家庭享美好食光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/2/n13816126.md#1">达成慈善基金会 捐赠县府300万元济助弱势家庭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/8/n13819971.md#1">传爱心莲心 捐赠白米2.3万公斤助弱势</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14161870.md#1">模拟电子厂火警 桃消演练过程逼真</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14161867.md#1">桃园新年长照服务不打烊 提前拨打1966预约服务</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/19/n14161863.md#1">宠物公园x白沙屯妈祖“龙年限定福袋”开卖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/21/n13786098.md#1">集爱送庇护礼 盼庇护工场中秋营收突破千万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/11/n13800035.md#1">庇护工场中秋礼盒传爱 竹市府邀民众响应公益</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/21/n13807118.md#1">身障团体暨庇护工场秋节产品展售 呼吁大家踊跃购买</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/24/n13808786.md#1">伊甸吁家长关注 逾3成幼儿需进一步了解发展</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/2/n13815955.md#1">永信社福中秋送暖 助弱势家庭享美好食光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/2/n13816126.md#1">达成慈善基金会 捐赠县府300万元济助弱势家庭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/8/n13819971.md#1">传爱心莲心 捐赠白米2.3万公斤助弱势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305711.md#1">开南大学菲律宾高中生华语营队 跨国互动交流</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305706.md#1">“月亮守卫队”暖心登场 爱老人助孤老造势暖身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305686.md#1">美国加州圣盖博市访桃 盼深化双边交流</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/17/n10491766.md#1" target="_blank">朝鲜战争锣鼓掩盖下的暴力土改</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/21/n11398539.md#1" target="_blank">国际宗教自由委员会副主席：20年的迫害太久</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/14/n10393987.md#1" target="_blank">林辉：掩盖大饥荒真相 五省书记罪责难逃（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11247031.md#1" target="_blank">加拿大渥太华市长连续9年宣布 法轮大法日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156773.md#1">水母状UFO现身伊拉克美军基地 画面曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156765.md#1">留意！为何甲辰龙年起连续五年没有“年三十”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/9/n14154327.md#1">穿越时空而来 神秘赊刀人二则预言引起共振</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156294.md#1">【未解之谜】美国迈阿密购物中心惊现“大灰人”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/9/n14154365.md#1">她劝丈夫这么做 才保全了儿子的性命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14161068.md#1">【全球新闻】中印边境冲突 中共士兵两次被击退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14160778.md#1">【新唐人快报】“迁西好人”获释 网友喊冤有用</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14160739.md#1">【菁英论坛】财新猛踩痛点 刀把子黑幕太多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159800.md#1">除草剂失效 农作物杀伤性杂草正在美国蔓延</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14160059.md#1">胡海峰升官破规矩 分析指中南海有特别盘算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/17/n14160408.md#1">中国中产“崩塌”消息密集传来 专家解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159828.md#1">刀郎获赔7.5万元 女歌手降央卓玛被判侵权</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/15/n14159148.md#1">面相大师12年前预言“赖清德有总统命”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159778.md#1">王一博经纪公司股价一日暴跌近八成 引恐慌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159856.md#1">前东家发布版权声明 邓紫棋演唱歌曲被涉及</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159415.md#1">RM与V获选为最精锐训练兵 训练结训公开合照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Dockers 男士超细斜纹夹克 80%折扣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156286.md#1">每日必吃3类食物 日87岁执业医师分享健康秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/8/n14153869.md#1">抗发炎 哪些顶级食物该吃 哪些一定不要吃？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159463.md#1">调查：全球最准时的机场和航空公司排名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/16/n14159636.md#1">一种有效却被忽视的慢性疼痛治疗方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296328.md#1">青春走一回  儿子，谢谢你教会我这一课！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299288.md#1">【未解之谜】多个预言印证? 2025年有巨变 日台要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296470.md#1">【未解之谜】数千年来无人敢登顶 西藏神山冈仁波齐峰之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279168.md#1">【历史的瞬间】贝隆夫人──她的谎言与美丽，让阿根廷哭泣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294567.md#1">神秘奇观：雷震飞石 奇异预兆应验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299362.md#1">【晚间新闻】巴黎奥运塞纳河开幕 安保规模空前</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299360.md#1">【全球新闻】巴黎奥运惊魂 高铁遇袭瘫痪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299352.md#1">【中国禁闻】贿赂美官员迫害法轮功 两侨领认罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298566.md#1">报告：中共利用军演盗窃西方先进战机技术</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298583.md#1">游客过多 日本餐厅想出一招来应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298682.md#1">大陆一电动汽车自燃 厂家员工到场先撬车标</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297939.md#1">传胡歌获90后妻子陪伴 黄曦宁穿着朴素低调</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298693.md#1">赵丽颖带5岁儿子与父母聚餐 画面温馨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14299514.md#1">席琳·迪翁巴黎奥运开幕式献唱《爱的赞歌》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298646.md#1">贝克汉姆夫妇结婚25周年 两人户外恩爱照曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298560.md#1">王兵执导新片入围威尼斯 疑踩红线遭陆网封杀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296813.md#1">超级食物酪梨怎么切 简单4步骤学起来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/24/n14297898.md#1">这蔬菜让人百吃不厌 专家说多多益善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/22/n14296131.md#1">大型研究：每日服复合维生素增加死亡风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/25/n14298289.md#1">为何太空人在太空中避免吃这5种食物？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14292077.md#1">牙龈红肿出血又松动？两招自救</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/9/n13820872.htm">桃园市长参选人郑运鹏 关心弱势儿童</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/9/9/n13820872.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/9/n13820872.htm">桃园市长参选人郑运鹏 关心弱势儿童</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/9/n13820872.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
